--- a/MobileSafe/app/src/main/res/layout/activity_drag_view.xml
+++ b/MobileSafe/app/src/main/res/layout/activity_drag_view.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5000"
-    >
+    android:background="#5000">
 
     <TextView
         android:id="@+id/tv_top"
