--- a/MobileSafe/app/src/main/res/values/colors.xml
+++ b/MobileSafe/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="black">#000</color>
     <color name="red">#f00</color>
     <color name="transParent">#808080</color>
+    <color name="textColorPrimaryDark">#ff000000</color>
 </resources>
