--- a/MobileSafe/app/src/main/res/values/styles.xml
+++ b/MobileSafe/app/src/main/res/values/styles.xml
@@ -52,4 +52,9 @@
         <item name="android:onClick">previous</item>
     </style>
 
+    <style name="widget_text">
+        <item name="android:textSize">16.0dip</item>
+        <item name="android:textColor">@color/textColorPrimaryDark</item>
+    </style>
+
 </resources>
