缓存清理，程序锁，二维码，样式优化及bug修复。

--- a/MobileSafe/app/src/main/res/layout/activity_antivirus.xml
+++ b/MobileSafe/app/src/main/res/layout/activity_antivirus.xml
@@ -53,7 +53,7 @@
 
             <ProgressBar
                 android:id="@+id/progressBar1"
-                style="?android:attr/progressBarStyleHorizontal"
+                style="@style/MyHorizontalProgressBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
