--- a/MobileSafe/app/src/main/res/layout/activity_atools.xml
+++ b/MobileSafe/app/src/main/res/layout/activity_atools.xml
@@ -40,7 +40,36 @@
 
     <ProgressBar
         android:id="@+id/sms_progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/MyHorizontalProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+    <TextView
+        android:text="应用锁"
+        android:textSize="20sp"
+        android:background="#ADD8E6"
+        android:textColor="@color/black"
+        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
+        android:drawablePadding="10dp"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:clickable="true"
+        android:onClick="appLock"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="二维码"
+        android:textSize="20sp"
+        android:background="#ADD8E6"
+        android:textColor="@color/black"
+        android:drawableLeft="@android:drawable/ic_menu_share"
+        android:drawablePadding="10dp"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:clickable="true"
+        android:onClick="qrCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
