--- a/MobileSafe/app/src/main/res/layout/activity_splash.xml
+++ b/MobileSafe/app/src/main/res/layout/activity_splash.xml
@@ -20,10 +20,11 @@
 
 
     <ProgressBar
+        style="@style/MyProgressBar"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/tv_version"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"/>
+        android:layout_height="wrap_content"  />
 
     <TextView
         android:id="@+id/tv_progress"
