--- a/MobileSafe/app/src/main/res/drawable/progress_medium_white.xml
+++ b/MobileSafe/app/src/main/res/drawable/progress_medium_white.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/splah_phone"
+    android:drawable="@drawable/jiazai"
     android:pivotX="50%"
     android:pivotY="50%" />
 
