--- a/MobileSafe/app/src/main/res/values/styles.xml
+++ b/MobileSafe/app/src/main/res/values/styles.xml
@@ -59,8 +59,10 @@
     
     
     <style name="MyProgressBar" parent="Widget.AppCompat.ProgressBar">
-        <item name="android:indeterminateOnly">true</item>
+        <item name="android:indeterminateOnly">true</item><!--设置为不确定模式-->
         <item name="android:indeterminateDrawable">@drawable/progress_medium_white</item>
+       <!-- 定义当进度达到最大时，不确定模式的表现；
+        该值必须为repeat或者cycle，repeat表示进度从0重新开始；cycle表示进度保持当前值，并且回到0-->
         <item name="android:indeterminateBehavior">repeat</item>
         <item name="android:indeterminateDuration">3500</item>
         <item name="android:maxHeight">48dp</item>
@@ -70,6 +72,7 @@
     </style>
 
     <style name="MyHorizontalProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <!--进度值确定为true，不确定为false-->
         <item name="android:indeterminateOnly">false</item>
         <item name="android:progressDrawable">@drawable/progress_horizontal</item>
         <item name="android:maxHeight">20dp</item>
